welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: reassignment to val
	else if (noDoubles && die1 == die2 && (die1 == 6) ){ die1=1; return die1 +die2 }
                                                                 ^withoutDoubles:4: error: reassignment to val
	else if (noDoubles && die1 == die2 && (die2 == 6) ){ die2=1; return die1 +die2 }
                                                                 ^withoutDoubles:5: error: not found: value dies1
	else return dies1 +dies2
                    ^